--- a/Sports.html
+++ b/Sports.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-s" data-rv-view="98" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/c">free web page maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-s" data-rv-view="98" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -73,17 +73,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Lucky to be Lions</h3>
+                            <h3 class="mbr-section-title display-2">Kayla Smith:<br>A Teen <br>Runner’s Life</h3>
 
                             <div class="mbr-section-text">
-                                <p>What does our mascot mean to us?</p>
+                                <p>Feature article shedding light on one <br>of St. Johns’ most devoted athletes…</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page13.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page30.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/hot-dog-mascots-1400x893.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/untitled1-938x625.png"></div>
                         </div>
 
                     </div>
@@ -102,20 +102,20 @@
         <div class=" row">
             <div class=" col-xs-12">
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider2-r" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-r" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-r" class="" data-slide-to="2"></li>
+                    <li data-app-prevent-settings="" data-target="#slider2-r" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider2-r" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-r" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section carousel-item dark center active" data-bg-video-slide="false">
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/man-back.jpg">
+                                <img src="assets/images/hot-dog-mascots-1400x893.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-2 text-xs-center">
-                                        <h2 class="mbr-section-title display-2">Coming Soon</h2>
-                                        <p class="mbr-section-lead lead">More articles being written... literary genius takes time. :) </p>
+                                        <h2 class="mbr-section-title display-2">Lucky to be Lions</h2>
+                                        <p class="mbr-section-lead lead">What does our mascot mean to us? </p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page17.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page13.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
