--- a/Archives.html
+++ b/Archives.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="199" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/e">website building software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="199" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -94,12 +94,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-1200x800.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/fullsizeoutput-254-1400x2100.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :)</p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Daydream Nation: A Photo Series</h4>
+                        <h5 class="card-subtitle">Photographed By: Andreea Samareannu</h5>
+                        <p class="card-text">An expression through style<br></p>
+                        <div class="card-btn"><a href="page28.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -107,12 +107,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-1200x800.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/untitled1-600x399.png" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :)</p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Kayla Smith:<div>A Teen&nbsp;</div><div>Runner’s Life</div></h4>
+                        <h5 class="card-subtitle">Written By: Isaiah Lowney</h5>
+                        <p class="card-text">Feature article shedding light on one <br>of St. Johns’ most devoted athletes…</p>
+                        <div class="card-btn"><a href="page30.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
