--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="88" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/d">website software</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="88" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -149,7 +149,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Time to Grow Up<div>Mr. Kim Jong-Un</div></h4>
                         <h5 class="card-subtitle">Written By: Eva Morris</h5>
-                        <p class="card-text">An piece discussing the North Korean missiles. <br>Note: Since this article was written, a second missile was launched on the 15th September.&nbsp;</p>
+                        <p class="card-text">A piece discussing the North Korean missiles. <br>Note: Since this article was written, a second missile was launched on the 15th September.&nbsp;</p>
                         <div class="card-btn"><a href="page26.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
