--- a/Arts.html
+++ b/Arts.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="272" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="272" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -73,17 +73,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Bye Bye Birdie</h3>
+                            <h3 class="mbr-section-title display-2">"Ship of Fools" Exhibition</h3>
 
                             <div class="mbr-section-text">
-                                <p>This article gives an overview of the plot and characters of this year's musical.</p>
+                                <p>An article about the featured artist, Leon De Bliquy, at the school's very on Greene Gallery.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page21.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page32.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/byebyebirdie-1400x818.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/picture1-703x553.png"></div>
                         </div>
 
                     </div>
@@ -118,12 +118,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/desktop.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/byebyebirdie-1400x818.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :)</p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Bye Bye Birdie</h4>
+                        <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
+                        <p class="card-text">This article gives an overview of the plot and characters of this year's musical.</p>
+                        <div class="card-btn"><a href="page21.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
