--- a/Arts.html
+++ b/Arts.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="272" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="272" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -76,7 +76,7 @@
                             <h3 class="mbr-section-title display-2">"Ship of Fools" Exhibition</h3>
 
                             <div class="mbr-section-text">
-                                <p>An article about the featured artist, Leon De Bliquy, at the school's very on Greene Gallery.</p>
+                                <p>An article about the featured artist, Leon De Bliquy, at the school's very own Greene Gallery.</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-secondary" href="page32.html">MORE</a></div>
