--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -9,10 +9,10 @@
   <link rel="shortcut icon" href="assets/images/20988002-1378120402302790-1549326759-n-130x128.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
   <title>Miscellaneous</title>
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="menu-d" data-rv-view="27">
+<section id="menu-d" data-rv-view="44">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="31" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="48" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -73,17 +73,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Applying to US Universities</h3>
+                            <h3 class="mbr-section-title display-2">Applying to Canadian Universities</h3>
 
                             <div class="mbr-section-text">
-                                <p>Advice on how to apply to universities in the US</p>
+                                <p>Advice on how to apply to universities in Canada</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page31.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page33.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/mbr-1701x1080.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/cnada2-1410x846.jpg"></div>
                         </div>
 
                     </div>
@@ -97,12 +97,12 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-16" data-rv-view="34" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-16" data-rv-view="51" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class=" container article-slider">
         <div class=" row">
             <div class=" col-xs-12">
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-16" class="" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="3"></li>
+                    <li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-16" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider2-16" class="" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section carousel-item dark center active" data-bg-video-slide="false">
@@ -150,17 +150,17 @@
                                 </div>
                             </div>
                         </div>
-                    </div><div class="mbr-section carousel-item dark center" data-bg-video-slide="https://www.youtube.com/watch?v=uNCr7NdOJgw">
+                    </div><div class="mbr-section carousel-item dark center" data-bg-video-slide="false">
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/bridge.jpg">
+                                <img src="assets/images/mbr-1200x761.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-1">
-                                        <h2 class="mbr-section-title display-2">Coming Soon</h2>
-                                        <p class="mbr-section-lead lead">More articles being written... literary genius takes time. :) </p>
+                                        <h2 class="mbr-section-title display-2">Applying to US Universities</h2>
+                                        <p class="mbr-section-lead lead">Advice on how to apply to universities in the US</p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page17.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page31.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -181,7 +181,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e" data-rv-view="29" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e" data-rv-view="46" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -192,14 +192,12 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/mobirise-slider-video/script.js"></script>
   
   
   <input name="animation" type="hidden">
