--- a/Archives.html
+++ b/Archives.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="66" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="66" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -107,12 +107,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-1200x800.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/screen-shot-2017-11-15-at-8.19.11-am-524x391.png" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :)</p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">St. John's for a Newcomer</h4>
+                        <h5 class="card-subtitle">Written By: Ilinca Maria Manda</h5>
+                        <p class="card-text">A perspective of St. John's from a new student. </p>
+                        <div class="card-btn"><a href="page34.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
