--- a/Opinions.html
+++ b/Opinions.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web page builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1g" data-rv-view="189" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1g" data-rv-view="189" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -73,17 +73,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Time to Grow Up<br>Mr. Kim Jong-Un</h3>
+                            <h3 class="mbr-section-title display-2">St. John's for a Newcomer</h3>
 
                             <div class="mbr-section-text">
-                                <p>A piece discussing the North Korean missiles.&nbsp;<br>Note: Since this article was written, a second <br>missile was launched on the 15th September. <br><br></p>
+                                <p>A perspective of St. John's from a new student. <br><br></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page26.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page34.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/130518052242-north-korea-missiles-super-169-1100x619.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/screen-shot-2017-11-15-at-8.19.11-am-524x391.png"></div>
                         </div>
 
                     </div>
@@ -132,12 +132,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/coworkers.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/130518052242-north-korea-missiles-super-169-600x337.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :) </p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Time to Grow Up Mr. Kim Jong Un</h4>
+                        <h5 class="card-subtitle">Written By: Eva Morris</h5>
+                        <p class="card-text">A piece discussing the North Korean missiles. <br>Note: Since this article was written, a second <br>missile was launched on the 15th September.</p>
+                        <div class="card-btn"><a href="page26.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
