--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="241" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="241" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -145,12 +145,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/130518052242-north-korea-missiles-super-169-600x337.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/screen-shot-2017-11-15-at-8.19.11-am-524x391.png" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Time to Grow Up<div>Mr. Kim Jong-Un</div></h4>
-                        <h5 class="card-subtitle">Written By: Eva Morris</h5>
-                        <p class="card-text">A piece discussing the North Korean missiles. <br>Note: Since this article was written, a second missile was launched on the 15th September.&nbsp;</p>
-                        <div class="card-btn"><a href="page26.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">St. John's for a Newcomer</h4>
+                        <h5 class="card-subtitle">Written By: Ilinca Maria Manda</h5>
+                        <p class="card-text">A perspective of St. John's from a new student.&nbsp;</p>
+                        <div class="card-btn"><a href="page34.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
