--- a/page29.html
+++ b/page29.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="menu-8m" data-rv-view="537">
+<section id="menu-8m" data-rv-view="714">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free website builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-8o" data-rv-view="541" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.co/i">how to build a website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-8o" data-rv-view="718" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
 
     
     <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-8p" data-rv-view="544" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-8p" data-rv-view="721" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-8s" data-rv-view="546" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-8s" data-rv-view="723" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -93,7 +93,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-8t" data-rv-view="548" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-8t" data-rv-view="725" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -103,7 +103,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-8n" data-rv-view="539" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-8n" data-rv-view="716" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
