--- a/page27.html
+++ b/page27.html
@@ -60,14 +60,14 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design a website</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-7q" data-rv-view="622" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/a">web builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-7q" data-rv-view="622" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 1; background-color: rgb(145, 189, 174);">
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">Each Star Sign's New Anthem</h3>
+                <h3 class="mbr-section-title display-2">How Your Sign Should Deal With the Turn of the Weather</h3>
                 <div class="lead"><p>These horoscopes are a group effort.</p></div>
                 
             </div>
