--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="343" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/c">free website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="343" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -106,12 +106,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-1200x761.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mbr-2-1200x797.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Applying to the US</h4>
-                        <h5 class="card-subtitle">Written By: Evan Dastin-van Rijn</h5>
-                        <p class="card-text">Advice on how to apply to universities in the US<br><br></p>
-                        <div class="card-btn"><a href="page31.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Reading Suggestions for the Cold Season</h4>
+                        <h5 class="card-subtitle">Written By: Ilinca Maria Manda</h5>
+                        <p class="card-text">Book recommendations for this Winter.<br><br></p>
+                        <div class="card-btn"><a href="page36.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -132,12 +132,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/picture1-703x553.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/24796630-10155341163966747-151520171172123512-n-600x450.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">"Ship of Fools" Exhibition</h4>
-                        <h5 class="card-subtitle">Written By: Anna Hilton-Ibold</h5>
-                        <p class="card-text">An article about the featured artist, Leon De Bliquy, at the school's very own Greene Gallery.<br><br></p>
-                        <div class="card-btn"><a href="page32.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Winter Art Vernissage</h4>
+                        <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
+                        <p class="card-text">An article about the Winter Art Vernissage, reactions to it, and inspiration for the artists.<br><br></p>
+                        <div class="card-btn"><a href="page38.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
